plugins {
    id 'org.springframework.boot' version '3.0.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.freefair.lombok" version "6.5.1"
    id 'com.google.cloud.tools.jib' version '3.3.0'
    id 'java'
}

group = 'com.tomw'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation platform('com.azure:azure-sdk-bom:1.2.6')
    implementation 'com.azure.resourcemanager:azure-resourcemanager-resourcegraph:1.0.0-beta.3'
    implementation 'com.azure:azure-monitor-query'
    implementation 'com.azure:azure-identity'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.named("jar") {
    enabled = false
}